# esp32-s3-rust-axum-example

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  flash  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: apiserver.rs  config.rs  main.rs  server.rs  state.rs  wifi.rs
