[package]
name = "esp32axum"
version = "0.0.1"
authors = ["Gábor Gyebnár <korteur@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0", features = ["http1", "json"] }
axum-macros = "0"
heapless = "0.8.0"
embedded-hal = "1"
embedded-svc = { version = "0", features = ["experimental"] }
esp-idf-sys = { version = "0", features = ["binstart"] }
esp-idf-svc = { version = "0", features = ["alloc", "experimental"] }
esp-idf-hal = "0"
log = "0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }

[build-dependencies]
build-data = "0"
embuild = "0"
anyhow = "1"

[profile.release]
debug = false
opt-level = "s"
#lto = "thin"
strip = true
panic = "abort"

[profile.dev]
debug = true
opt-level = 2
lto = "off"

[package.metadata.espflash]
partition_table = "./partitions.csv"
